@@ -1119,7 +1119,6 @@ e_cert_db_import_pkcs12_file (ECertDB *cert_db,
 			      const char *file_path,
 			      GError **error)
 {
-#if notyet
 	EPKCS12 *pkcs12 = e_pkcs12_new ();
 	GError *e = NULL;
 
@@ -1129,12 +1128,9 @@ e_cert_db_import_pkcs12_file (ECertDB *cert_db,
 	}
 
 	return TRUE;
-#else
-#warning "e_cert_db_import_pkcs12_file not implemented yet"
-	return FALSE;
-#endif
 }
 
+#if notyet
 gboolean
 e_cert_db_export_pkcs12_file (ECertDB *cert_db,
 			      const char *file_path,
@@ -1142,6 +1138,7 @@ e_cert_db_export_pkcs12_file (ECertDB *cert_db,
 			      GError **error)
 {
 }
+#endif
 
 gboolean
 e_cert_db_login_to_slot (ECertDB *cert_db,
